--- a/km/umkm/fixtures/pengetahuan.yaml
+++ b/km/umkm/fixtures/pengetahuan.yaml
@@ -7,15 +7,104 @@
     status: 1
     creator: 1
     post_category: 5
-    post_type: 1
 
 - model: umkm.Artikel
-  pk: 1
+  pk: 2
   fields:
-    post_title: Membuat Basis Data Dalam Android
-    post_content: Untuk membuat basisi data dalam android kita harus bisa pemrograman terlebih dahulu kalau tidak ya percuma
+    post_title: Menggunakan Aplikasi Mobile Untuk Penjualan
+    post_content: Aplikasi mobile dapat digunakan untuk penjualan barang. Kalau nggak percaya silahkan dicoba sendiri
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 4
+
+- model: umkm.Artikel
+  pk: 3
+  fields:
+    post_title: Membuat Bahan Makanan Berhasiat Tinggi
+    post_content: Makanan yang dibuat sendiri seharusnya dikombinasikan secara baik sehingga hasilnya juga baik. Kalau dibuat orang lain itu mungkin hasilnya nggak terlalu baik. oke.
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 1
+
+- model: umkm.Product
+  pk: 4
+  fields:
+    post_title: Pakaian Berbahan Serat Organik
+    post_content: Kami membuat pakaian dari serat organik yang bisa dimakan dan cocok untuk dipakai kapan saja di mana saja.
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 2
+
+- model: umkm.Question
+  pk: 5
+  fields:
+    post_title: Tanya Menjual Barang
+    post_content: Bagaimana cara menjual barang yang tidak terpakai agar laku di pasaran.
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 2
+
+- model: umkm.Question
+  pk: 6
+  fields:
+    post_title: Membuat Jagung yang Enak
+    post_content: Hasil tanaman jagung saya kok nggak enak ya? Biar bisa enak caranya gimana ya?
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 2
+
+- model: umkm.Answer
+  pk: 7
+  fields:
+    post_title: Jual aja di toko bagus
+    post_content: Kalau pengen jual barang yang tidak terpakai ya jual aja di toko bagus.
     post_excerpt: -
     status: 1
     creator: 1
     post_category: 5
-    post_type: 1
+
+- model: umkm.Answer
+  pk: 8
+  fields:
+    post_title: Jual ke temen sejawat
+    post_content: Jual ke teman sejawat sambil dipaksa-paksa. Kalau masih nggak mau ya dirampok aja.
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 3
+
+- model: umkm.Answer
+  pk: 9
+  fields:
+    post_title: Nanam di Tanah Jangan di Genteng
+    post_content: Kalau pengen enak nanamnya di tanah aja tho, jangan di genteng.
+    post_excerpt: -
+    status: 1
+    creator: 1
+    post_category: 1
+
+- model: umkm.Relationship
+  pk: 1
+  fields:
+    from_knowledge: 7
+    to_knowledge: 5
+    relation_type: 6
+
+- model: umkm.Relationship
+  pk: 2
+  fields:
+    from_knowledge: 8
+    to_knowledge: 5
+    relation_type: 6
+
+- model: umkm.Relationship
+  pk: 3
+  fields:
+    from_knowledge: 9
+    to_knowledge: 6
+    relation_type: 6
